examples/test/testpolicy7496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7496
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key47: value4
      key3: value24
      key28: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value25
      podSelector:
        matchLabels:
          key33: value4
